[tool.poetry]
name = "temporal-llm-openai-streaming"
version = "0.1.0"
description = ""
authors = ["Steve Androulakis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.51.2"
temporalio = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"